charts/gitops-react-app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitops-react-app
  labels:
    app.kubernetes.io/name: gitops-react-app
    app.kubernetes.io/instance: gitops-react-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: gitops-react-app
    app.kubernetes.io/instance: gitops-react-app
